--- a/Views/A4community.html
+++ b/Views/A4community.html
@@ -26,9 +26,7 @@
                 </div>
             </ul>
         </nav>
-        <div class="popularTags">
-            <h2>Tags will go here</h2>
-        </div>
+        
     </header>
 
     <section class="Introduction">
@@ -37,7 +35,7 @@
     </section>
 
     <section class="Discussions">
-        <h2 class="changeTextColour">Discussions</h2>
+        <h2 class="changeTextColour">User Posts</h2>
         <button id="addPost" onclick="getForm()" class="disccusionButton">Start a discussion</button>
         <div class="disccusionForm" id="disccusionForm">
             <h4>Your Post</h1>
@@ -52,26 +50,36 @@
         </div>
     </section>
 
+  
     <div id="discussionContainer" class="showPosts">
-        <h2>User Posts</h2>
+       
         <div id="discussions"></div>
     </div>
 
     <footer>
         <div class="bottom-footer">
             <nav>
+                <!-- Bottom navigation for ease -->
                 <ul>
-                    <li><a href="/index"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li>
+                    <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
+                    <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
                     <li><a href="/communities">Find a community</a></li>
                     <li><a href="#">Page 3</a></li>
                 </ul>
             </nav>
+        
             <div class="back2top">
                 <a href="#top">Back to the top</a>
             </div>
         </div>
+
         <p class="trademark">2024 Audi Forum Website &#174;</p>
     </footer>
+    
+
+
+    <script src="sites.js/header.js"></script>
+</body>
 
     <script>
         function fetchDiscussions() {
@@ -112,8 +120,8 @@
     
                             <button class="discussion-reply replyButton"  onclick="replyToDiscussion('${discussion.title}', '${discussion.username}')">Reply</button>
                             <form class="deleteDiscussionForm" action="/A4/A4DeletePost" method="post">
-                                <input type="text" name="discussionId" value="${discussion.discussionId}">
-                                <button type="submit" class="deleteButton">Delete</button>
+                                <input type="hidden" name="discussionId" value="${discussion.discussionId}">
+                                <button type="submit" id="deleteButton" class="deleteButton">Delete</button>
                             </form>
                         `;
                         discussionsContainer.appendChild(discussionElement);
@@ -134,6 +142,6 @@
         document.getElementById('modelType').value = getUrl();
     </script>
 
-    <script src="sites.js/header.js"></script>
+    
 </body>
 </html>
