--- a/public/styles.css/individualCommunties.css
+++ b/public/styles.css/individualCommunties.css
@@ -115,10 +115,11 @@
     padding: 10px;
 }
 
-.showPosts h2
+.Posts
 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
+    position: relative;
+    left: 295px;
     font-size: 30px;
 }
 .discussion-topic
